Fix IE11 discout label overlapes "Pay annualy" (#7795)
This was one issue mentionned in #6865.
One issue = one PR.

--- a/src/sass/pages/dashboard/totalRows.scss
+++ b/src/sass/pages/dashboard/totalRows.scss
@@ -13,6 +13,7 @@
     min-width: 1px; /*IE*/
     white-space: nowrap;
     margin-left: 4px;
+    flex-shrink: 0;
 }
 
 .totalRows-label-right {
